test/Fail/Issue998a.err
Issue998a.agda:8.12-15: error: [UnequalTerms]
The terms
  A
and
  Issue998a.A
are not equal at type Set
when checking that the expression d A has type D Issue998a.A
